--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "eslint-plugin-react-dom": "^1.52.2",
     "eslint-plugin-react-x": "^1.52.2",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.10"
   },
